Fixes crash when copying hotspot

Summary:
Fixes crash when copying hotspot. It is caused by the code would remove
any actions from the hotspot after the context menu had executed, but
these actions have now been freed because the hotspot is freed (this was
done in 7265be97a2e9d84c4e036d426ffb0085710d9361 to fix a memory leak).

Test Plan:
echo https://kde.org/
edit->find
type kde in the search box
select kde.org
right click and click copy

BUG: 408603

Reviewers: #konsole, hindenburg

Subscribers: konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D21849